--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "commander": "^10.0.0",
     "dockerode": "^3.3.4",
     "figlet": "^1.5.2",
-    "inquirer": "^8.2.5"
+    "inquirer": "^8.2.5",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@types/figlet": "^1.5.5",
